feat: added assets

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Monster Maker</title>
     <link rel="stylesheet" href="input.css" />
   </head>
-  <body>
-    <h1 class="">hello</h1>
-  </body>
+  <body></body>
 </html>
