--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Monster Maker</title>
+
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="input.css" />
+
+    <!-- Google Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <div class="buttons">
+        <button id="face-btn">Face</button>
+        <button id="color-btn">Color</button>
+        <button id="horns-btn">Horns</button>
+        <button id="tail-btn">Tail</button>
+      </div>
+      <div class="container">
+        <div class="monster">
+          <div class="monster-horns"></div>
+          <div class="monster-tail"></div>
+          <div class="monster-body">
+            <img src="./assets/face-0.png" alt="Face" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Script -->
+    <script src="./script.js" defer></script>
+  </body>
 </html>
