feat: added tags

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
           <div class="monster-horns"></div>
           <div class="monster-tail"></div>
           <div class="monster-body">
-            <img src="./assets/face-0.png" alt="Face" />
+            <img src="./assets/face-0.png" id="face" alt="Face" />
           </div>
         </div>
       </div>
